# synth-dataset-kit

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  sdk_config_ollama_smoke.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: benchmark-proof.md  case-study-customer-support.md  distribution-plan.md  done-definition.md  external-validation-runbook.md  launch-pack.md  priority-roadmap.md  product-positioning.md  proof-of-results-roadmap.md  support-eval-story.md
examples/: coding_tutor_holdout.jsonl  coding_tutor_seeds.jsonl  customer_support_holdout.jsonl  customer_support_seeds.jsonl  faq_assistant_holdout.jsonl  faq_assistant_seeds.jsonl  it_helpdesk_holdout.jsonl  it_helpdesk_seeds.jsonl
scripts/: expand_topics.py  generate_multiturn.py  render_showcase_summary.py  score_existing.py
showcase/coding_tutor_demo/: README.md
showcase/customer_support_demo/: PUBLISHING.md  README.md  SHOWCASE_METRICS.md  expanded_e_commerce_and_saas_customer_support_orders_shipping_billing_ref_case_study.md  expanded_e_commerce_and_saas_customer_support_orders_shipping_billing_ref_quality_report.html  expanded_e_commerce_and_saas_customer_support_orders_shipping_billing_ref_quality_report.json  run_summary.json
showcase/faq_assistant_demo/: README.md
showcase/it_helpdesk_demo/: README.md
synth_dataset_kit/: __init__.py  cli.py  config.py  engine.py  evaluation.py  llm_client.py  models.py  prompts.py  publishing.py  showcase.py  support_cleanup.py  training.py  utils.py
synth_dataset_kit/cli/: __init__.py  _app.py  _commands_advanced.py  _commands_pipeline.py  _commands_primary.py  _display.py
synth_dataset_kit/decontamination/: __init__.py  cache.py  core.py  embeddings.py  loaders.py  signatures.py  utils.py
synth_dataset_kit/exporters/: __init__.py  case_study.py  dataset.py  eval_summary.py  formats.py  huggingface.py  pipeline.py  proof.py  quality.py
synth_dataset_kit/generators/: __init__.py  seed_expander.py  topic_tree.py
synth_dataset_kit/quality/: __init__.py
tests/: test_cleanup.py  test_cli.py  test_config.py  test_core.py  test_decontamination.py  test_engine.py  test_evaluation.py  test_exporters.py  test_generators.py  test_llm_client.py  test_models.py  test_quality.py  test_training.py
(+8 files in other folders)
